syntax = "proto3";

package stock;

service StockService {
  rpc GetStockList (StockListRequest) returns (StockListResponse);
}

message StockListRequest {}

message StockListResponse {
  repeated Stock items = 1;
}

message Stock {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  float price = 4;
}
